set(LTJS_TARGET ltjs_lib_client_shell)

include(ltjs_common)

ltjs_add_default_options(stdafx.h)

add_definitions(-D_CLIENTBUILD)
add_definitions(-DMEMTRACK_CLIENT)

include_directories(
    .
    ../../clientres/shared
    ../../shared
    ../../../engine/sdk/inc
    ../../../libs/stdlith
    ../../../libs/butemgr
    ../../../libs/cryptmgr
    ../../../libs/lith
    ../../../libs/mfcstub
    ../../libs/ltguimgr
    ../../../libs/regmgr
    ../
    ../../libs/serverdir
)

set(
    HDRS
    activateobjectfx.h
    ../../shared/activatetypemgr.h
    ../../shared/activationdata.h
    baselinesystemfx.h
    basemenu.h
    baseparticlesystemfx.h
    basepolydrawfx.h
    basescalefx.h
    basescreen.h
    beamfx.h
    bodyfx.h
    bullettrailfx.h
    camerafx.h
    cameraoffsetmgr.h
    chainedfx.h
    characterfx.h
    cheatmgr.h
    client_physics.h
    clientbutemgr.h
    clientfxdb.h
    clientfxmgr.h
    clientinfomgr.h
    clientmultiplayermgr.h
    clientsaveloadmgr.h
    ../../shared/clientservershared.h
    clientsoundmgr.h
    clienttrackednodecontext.h
    clienttrackednodemgr.h
    clientutilities.h
    clientweapon.h
    clientweaponallocator.h
    clientweaponbase.h
    clientweaponmgr.h
    clientweaponnone.h
    clientweaponutils.h
    cmovemgr.h
    ../../shared/crc32.h
    credits.h
    cursormgr.h
    damagefxmgr.h
    deathfx.h
    debrisfx.h
    debuglinefx.h
    doomsdaypiecefx.h
    dynamiclightfx.h
    explosionfx.h
    fastlist.h
    firefx.h
    flashlight.h
    fullscreentint.h
    gadgetdisabler.h
    gadgettargetfx.h
    gamebutes.h
    gameclientshell.h
    gamesettings.h
    gibfx.h
    globalclientmgr.h
    headbobmgr.h
    hitbox.h
    hudbar.h
    hudchatinput.h
    huddamage.h
    huddecision.h
    huddisplaymeter.h
    huddistance.h
    huditem.h
    hudmessage.h
    hudmessagequeue.h
    hudmeter.h
    hudmgr.h
    hudmissiontext.h
    hudpaused.h
    hudpopup.h
    hudradar.h
    hudscores.h
    hudsubtitles.h
    hudtransmission.h
    ../../../engine/sdk/inc/iltbaseclass.h
    ../../shared/impacttype.h
    intelitemlist.h
    interfacemgr.h
    interfaceresmgr.h
    interfacesurfmgr.h
    interfacetimer.h
    ipmgr.h
    jumpvolumefx.h
    ../../shared/keymgr.h
    laserbeam.h
    lasertriggerfx.h
    layoutmgr.h
    leanmgr.h
    lensflarefx.h
    lightfx.h
    lightgroupfx.h
    lightningfx.h
    lightscalemgr.h
    linesystemfx.h
    loadingscreen.h
    ../../../engine/sdk/inc/lteulerangles.h
    ../../../engine/sdk/inc/ltmodule.h
    marksfx.h
    menuenum.h
    menuintel.h
    menuinventory.h
    menukeys.h
    menumgr.h
    menumission.h
    menuplayer.h
    menusystem.h
    messagebox.h
    minefx.h
    ../../shared/missionbutemgr.h
    missionmgr.h
    music.h
    muzzleflashfx.h
    muzzleflashparticlefx.h
    nodecontroller.h
    nodelinesfx.h
    objectivecontrol.h
    objspritefx.h
    overlays.h
    particleexplosionfx.h
    particleshowerfx.h
    particlesystemfx.h
    particletrailfx.h
    particletrailsegmentfx.h
    performanceenum.h
    performancemgr.h
    performancetest.h
    pickupitemfx.h
    plasma.h
    playercamera.h
    playerlurefx.h
    playermgr.h
    playersoundfx.h
    playerstats.h
    playervehiclefx.h
    playerviewattachmentmgr.h
    polydebrisfx.h
    polygridfx.h
    polylinefx.h
    popupmgr.h
    popuptext.h
    profilemgr.h
    ../../shared/profileutils.h
    projectilefx.h
    pvfxmgr.h
    radarobjectfx.h
    ../../shared/radartypemgr.h
    ragdoll.h
    ragdollconstraint.h
    ragdollnode.h
    randomsparksfx.h
    resource.h
    ../../shared/saveloadmgr.h
    scatterfx.h
    ../../shared/scmdconsole.h
    scmdconsoledriver_cshell.h
    ../../shared/scmdshared.h
    screencommands.h
    screenenum.h
    screenmgr.h
    screenpostload.h
    screenpreload.h
    screenspritemgr.h
    screentintmgr.h
    searcher.h
    ../../shared/searchitemmgr.h
    searchlightfx.h
    sfxmgr.h
    shareddefs.h
    ../../shared/sharedmission.h
    ../../shared/sharedscoring.h
    shellcasingfx.h
    skillcontrol.h
    smokefx.h
    snowfx.h
    soundfx.h
    sparam.h
    specialfx.h
    specialfxlist.h
    sprinklesfx.h
    stack.h
    stdafx.h
    steamfx.h
    systemdependant.h
    targetmgr.h
    ../../shared/teammgr.h
    texturefxmgr.h
    timedtext.h
    tracerfx.h
    ../../shared/trackednodecontext.h
    triggerfx.h
    ../../shared/triggertypemgr.h
    ../../shared/uberassert.h
    vartrack.h
    vehiclemgr.h
    visionmodemgr.h
    vkdefs.h
    volumebrushfx.h
    ../../shared/wavefn.h
    weaponchooser.h
    weaponfx.h
    weaponstringdefs.h
    weatherfx.h
    ../../shared/winutil.h
)

set(
    SRCS
    activateobjectfx.cpp
    ../../shared/activatetypemgr.cpp
    ../../shared/animator.cpp
    ../../shared/assertmgr.cpp
    ../../shared/attachbutemgr.cpp
    baselinesystemfx.cpp
    basemenu.cpp
    baseparticlesystemfx.cpp
    basepolydrawfx.cpp
    basescalefx.cpp
    basescreen.cpp
    beamfx.cpp
    bodyfx.cpp
    bullettrailfx.cpp
    ../../shared/butelistreader.cpp
    cameraoffsetmgr.cpp
    chainedfx.cpp
    characterfx.cpp
    cheatmgr.cpp
    client_physics.cpp
    clientbutemgr.cpp
    clientfxdb.cpp
    clientfxmgr.cpp
    clientinfomgr.cpp
    clientmultiplayermgr.cpp
    clientsaveloadmgr.cpp
    ../../shared/clientservershared.cpp
    clientsoundmgr.cpp
    clienttrackednodecontext.cpp
    clienttrackednodemgr.cpp
    clientutilities.cpp
    clientweapon.cpp
    clientweaponmgr.cpp
    clientweaponutils.cpp
    cmovemgr.cpp
    ../../shared/commonutilities.cpp
    ../../shared/crc32.cpp
    credits.cpp
    cursormgr.cpp
    damagefxmgr.cpp
    ../../shared/damagetypes.cpp
    deathfx.cpp
    debrisfx.cpp
    ../../shared/debrismgr.cpp
    ../../shared/debugline.cpp
    debuglinefx.cpp
    ../../shared/debugnew.cpp
    doomsdaypiecefx.cpp
    dynamiclightfx.cpp
    dynamicoccludervolumefx.cpp
    explosionfx.cpp
    firefx.cpp
    flashlight.cpp
    fullscreentint.cpp
    ../../shared/fxbutemgr.cpp
    ../../shared/fxstructs.cpp
    gadgetdisabler.cpp
    gadgettargetfx.cpp
    ../../shared/gamealloc.cpp
    ../../shared/gamebutemgr.cpp
    gameclientshell.cpp
    gamesettings.cpp
    gibfx.cpp
    globalclientmgr.cpp
    ../../shared/globalmgr.cpp
    headbobmgr.cpp
    hitbox.cpp
    hudbar.cpp
    hudchatinput.cpp
    huddamage.cpp
    huddecision.cpp
    huddisplaymeter.cpp
    huddistance.cpp
    hudmessage.cpp
    hudmessagequeue.cpp
    hudmeter.cpp
    hudmgr.cpp
    hudmissiontext.cpp
    hudpaused.cpp
    hudpopup.cpp
    hudradar.cpp
    hudscores.cpp
    hudsubtitles.cpp
    hudtransmission.cpp
    ../../../engine/sdk/inc/iltbaseclass.cpp
    intelitemlist.cpp
    interfacemgr.cpp
    interfaceresmgr.cpp
    interfacesurfmgr.cpp
    interfacetimer.cpp
    ipmgr.cpp
    jumpvolumefx.cpp
    ../../shared/keymgr.cpp
    laserbeam.cpp
    lasertriggerfx.cpp
    layoutmgr.cpp
    leanmgr.cpp
    lensflarefx.cpp
    lightfx.cpp
    lightgroupfx.cpp
    lightningfx.cpp
    lightscalemgr.cpp
    linesystemfx.cpp
    loadingscreen.cpp
    ../../../engine/sdk/inc/lteulerangles.cpp
    ../../../engine/sdk/inc/ltmodule.cpp
    ../../../engine/sdk/inc/ltobjref.cpp
    ../../../engine/sdk/inc/ltquatbase.cpp
    marksfx.cpp
    menuintel.cpp
    menuinventory.cpp
    menukeys.cpp
    menumgr.cpp
    menumission.cpp
    menuplayer.cpp
    menusystem.cpp
    messagebox.cpp
    minefx.cpp
    ../../shared/missionbutemgr.cpp
    missionmgr.cpp
    ../../shared/modelbutemgr.cpp
    music.cpp
    muzzleflashfx.cpp
    muzzleflashparticlefx.cpp
    ../../shared/netdefs.cpp
    nodecontroller.cpp
    nodelinesfx.cpp
    objectivecontrol.cpp
    objspritefx.cpp
    ../../shared/parsedmsg.cpp
    particleexplosionfx.cpp
    particleshowerfx.cpp
    particlesystemfx.cpp
    particletrailfx.cpp
    particletrailsegmentfx.cpp
    performancemgr.cpp
    performancetest.cpp
    pickupitemfx.cpp
    playercamera.cpp
    playerlurefx.cpp
    playermgr.cpp
    playersoundfx.cpp
    playerstats.cpp
    playervehiclefx.cpp
    playerviewattachmentmgr.cpp
    polydebrisfx.cpp
    polygridfx.cpp
    polylinefx.cpp
    popupmgr.cpp
    popuptext.cpp
    profilemgr.cpp
    ../../shared/profileutils.cpp
    projectilefx.cpp
    pvfxmgr.cpp
    radarobjectfx.cpp
    ../../shared/radartypemgr.cpp
    ragdoll.cpp
    ragdollconstraint.cpp
    randomsparksfx.cpp
    ../../shared/saveloadmgr.cpp
    scatterfx.cpp
    ../../shared/scmdconsole.cpp
    scmdconsoledriver_cshell.cpp
    screenmgr.cpp
    screenpostload.cpp
    screenpreload.cpp
    screenspritemgr.cpp
    screentintmgr.cpp
    searcher.cpp
    ../../shared/searchitemmgr.cpp
    searchlightfx.cpp
    sfxmgr.cpp
    ../../shared/sharedfxstructs.cpp
    ../../shared/sharedmission.cpp
    ../../shared/sharedscoring.cpp
    shellcasingfx.cpp
    skillcontrol.cpp
    ../../shared/skillsbutemgr.cpp
    smokefx.cpp
    snowfx.cpp
    ../../shared/soundbutemgr.cpp
    ../../shared/soundfiltermgr.cpp
    soundfx.cpp
    ../../shared/soundmgr.cpp
    sparam.cpp
    specialfxlist.cpp
    sprinklesfx.cpp
    ../../shared/stacktrace.cpp
    stdafx.cpp
    steamfx.cpp
    ../../shared/surfacefunctions.cpp
    ../../shared/surfacemgr.cpp
    targetmgr.cpp
    ../../shared/teammgr.cpp
    ../../shared/templatelist.cpp
    texturefxmgr.cpp
    timedtext.cpp
    tracerfx.cpp
    ../../shared/trackednode.cpp
    ../../shared/trackednodecontext.cpp
    ../../shared/trackednodecontrolfn.cpp
    ../../shared/trackednodemgr.cpp
    transitionfxmgr.cpp
    triggerfx.cpp
    ../../shared/triggertypemgr.cpp
    ../../shared/uberassert.cpp
    vehiclemgr.cpp
    ../../shared/versionmgr.cpp
    visionmodemgr.cpp
    vkdefs.cpp
    ../../shared/wavefn.cpp
    weaponchooser.cpp
    weaponfx.cpp
    ../../shared/weaponmgr.cpp
    weatherfx.cpp
    ../../shared/winutil.cpp
)

if (MSVC)
    set_source_files_properties(
        ../../../engine/sdk/inc/iltbaseclass.cpp
        ../../../engine/sdk/inc/lteulerangles.cpp
        ../../../engine/sdk/inc/ltmodule.cpp
        ../../../engine/sdk/inc/ltobjref.cpp
        ../../../engine/sdk/inc/ltquatbase.cpp
        PROPERTIES
            # Precompiled Header (None)
            COMPILE_FLAGS -Y-
    )

    set_source_files_properties(
        stdafx.cpp
        PROPERTIES
            # Precompiled Header (Create)
            COMPILE_FLAGS -Yc
    )
endif ()

add_library(
    ${LTJS_TARGET} STATIC
    ${HDRS}
    ${SRCS}
)
