set(LTJS_TARGET ltjs_lib_object)

include(ltjs_common)

ltjs_add_default_options(stdafx.h)

add_definitions(-D_SERVERBUILD)
add_definitions(-D_NO_AI_ASSERT)
add_definitions(-DMEMTRACK_SERVER)
add_compile_options($<$<NOT:$<CONFIG:DEBUG>>:-D_NOLFBUILD>)
add_compile_options($<$<NOT:$<CONFIG:DEBUG>>:-DUSE_INTEL_COMPILER>)

if (MSVC)
    add_compile_options(-GR)
endif ()

include_directories(
    .
    ../../shared
    ../../../engine/sdk/inc
    ../../../libs/stdlith
    ../../../libs/butemgr
    ../../../libs/cryptmgr
    ../../../libs/lith
    ../../../libs/mfcstub
    ../../../libs/regmgr
    ../../libs
    ../../libs/serverdir
)

set(
    HDRS
    ../../shared/activatetypemgr.h
    ../../shared/activationdata.h
    activeworldmodel.h
    ai.h
    aiassert.h
    aibrain.h
    aibutemgr.h
    aicentralknowledgemgr.h
    aiclassfactory.h
    aidatatypeenums.h
    aigoalabstract.h
    aigoalabstractsearch.h
    aigoalabstractstimulated.h
    aigoalabstracttargeted.h
    aigoalabstractuseobject.h
    aigoalalarm.h
    aigoalanimate.h
    aigoalapprehend.h
    aigoalassassinate.h
    aigoalattack.h
    aigoalattackfromcover.h
    aigoalattackfromrandomvantage.h
    aigoalattackfromroofvantage.h
    aigoalattackfromvantage.h
    aigoalattackfromview.h
    aigoalattackmelee.h
    aigoalattackprone.h
    aigoalattackprop.h
    aigoalattackranged.h
    aigoalattackrangeddynamic.h
    aigoalbutemgr.h
    aigoalcatch.h
    aigoalcharge.h
    aigoalchase.h
    aigoalcheckbody.h
    aigoalcover.h
    aigoaldeflect.h
    aigoaldisappearreappear.h
    aigoaldisappearreappearevasive.h
    aigoaldistress.h
    aigoaldramadeath.h
    aigoaldrawweapon.h
    aigoalexitlevel.h
    aigoalflee.h
    aigoalfollow.h
    aigoalfollowfootprint.h
    aigoalgetbackup.h
    aigoalgoto.h
    aigoalguard.h
    aigoalholsterweapon.h
    aigoalinvestigate.h
    aigoallovekitty.h
    aigoallunge.h
    aigoalmenace.h
    aigoalmgr.h
    aigoalmountedflashlight.h
    aigoalobstruct.h
    aigoalpatrol.h
    aigoalproximitycommand.h
    aigoalpsychochase.h
    aigoalreclassifytoenemy.h
    aigoalrespondtoalarm.h
    aigoalrespondtobackup.h
    aigoalresurrecting.h
    aigoalretreat.h
    aigoalsearch.h
    aigoalsentrychallenge.h
    aigoalsentrymark.h
    aigoalserumdeath.h
    aigoalsleep.h
    aigoalsniper.h
    aigoalspecialdamage.h
    aigoaltail.h
    aigoaltalk.h
    aigoaltypeenums.h
    aigoalwork.h
    aihuman.h
    aihumanstate.h
    aihumanstateapprehend.h
    aihumanstateattackmove.h
    aihumanstateattackprone.h
    aihumanstatecatch.h
    aihumanstatedeflect.h
    aihumanstatedisappearreappear.h
    aihumanstatelaunch.h
    aihumanstateobstruct.h
    aihumanstateresurrecting.h
    aihumanstatesentrychallenge.h
    aihumanstatesniper.h
    aihumanstrategy.h
    aihumanstrategyshootstream.h
    aihumanstrategytogglelights.h
    aiinformationvolumemgr.h
    aimovement.h
    aimovementmodifier.h
    ainode.h
    ainodedisturbance.h
    ainodeguard.h
    ainodemgr.h
    ainodesensing.h
    ainodetypeenums.h
    aipath.h
    aipathknowledgemgr.h
    aipathmgr.h
    airegion.h
    airegionmgr.h
    aisenserecorderabstract.h
    aisenserecordergame.h
    aisensetypeenums.h
    aisensing.h
    aisounds.h
    aisoundtypeenums.h
    aispatialrepresentationmgr.h
    aistate.h
    aistatetypeenums.h
    aistimulusmgr.h
    aistimulustypeenums.h
    aistrategy.h
    aistrategytypeenums.h
    aitarget.h
    aitypes.h
    aiutils.h
    aivolume.h
    aivolumemgr.h
    aivolumeneighbor.h
    aivolumetypeenums.h
    alarm.h
    ammobox.h
    animationlex.h
    animationmgr.h
    animationmovement.h
    animationmovementenums.h
    animationparse.h
    animationparser.h
    animationprop.h
    animationpropenums.h
    animationpropgroupenums.h
    animationpropstrings.h
    animationstd.h
    ../../shared/animator.h
    animatorplayer.h
    ../../shared/assertmgr.h
    ../../shared/attachbutemgr.h
    attachments.h
    ../../shared/automessage.h
    banipmgr.h
    body.h
    bodystate.h
    bombable.h
    breakable.h
    ../../shared/butelistreader.h
    butetools.h
    camera.h
    cdynarray.h
    character.h
    ../../shared/characteralignment.h
    characterhitbox.h
    charactermgr.h
    ../../shared/cheatdefs.h
    clientlightfx.h
    ../../shared/clientservershared.h
    clientsfx.h
    clientweaponsfx.h
    collectiverelationmgr.h
    commandbutemgr.h
    ../../shared/commandids.h
    commandmgr.h
    commandobject.h
    ../../shared/commonutilities.h
    ../../shared/containercodes.h
    controller.h
    coopmissionmgr.h
    ../../shared/crc32.h
    cvartrack.h
    ../../shared/damagetypes.h
    ../../shared/damagetypesenum.h
    deathmatchmissionmgr.h
    deathscene.h
    debrisfuncs.h
    ../../shared/debrismgr.h
    ../../shared/debugline.h
    debuglinesystem.h
    ../../shared/debugmgr.h
    decisionobject.h
    deditcolors.h
    destructible.h
    destructiblemodel.h
    dialogue.h
    displaymeter.h
    displaytimer.h
    doomsdaydevice.h
    doomsdaymissionmgr.h
    doomsdaypiece.h
    door.h
    doorknob.h
    editable.h
    eventcounter.h
    exittrigger.h
    explosion.h
    ../../shared/fastheap.h
    ../../shared/faststack.h
    fire.h
    ../../shared/fxbutemgr.h
    ../../shared/fxdefs.h
    ../../shared/fxflags.h
    ../../shared/fxstructs.h
    gadgettarget.h
    gadgettargetmgr.h
    ../../shared/gadgettargettypes.h
    gamebase.h
    gamebaselite.h
    ../../shared/gamebutemgr.h
    gameservershell.h
    gamestartpoint.h
    gearitems.h
    ../../shared/gibtypes.h
    ../../shared/globalmgr.h
    ../../shared/globals.h
    globalservermgr.h
    group.h
    hhweaponmodel.h
    ../../shared/hierarchicalbutemgr.h
    ihitboxuser.h
    ../../shared/impacttype.h
    intelligence.h
    intelmgr.h
    inventorybutemgr.h
    jumpvolume.h
    key.h
    keydata.h
    keyframer.h
    keyitem.h
    keypad.h
    lasertrigger.h
    lightgroup.h
    lightning.h
    liteobjectmgr.h
    lock.h
    mine.h
    ../../shared/modelbutemgr.h
    moditem.h
    ../../shared/msgids.h
    musicmgr.h
    ../../shared/netdefs.h
    nodeline.h
    noplayertrigger.h
    objectivesprite.h
    objectmsgs.h
    objectrelationmgr.h
    objectremover.h
    objecttemplatemgr.h
    ../../shared/parsedmsg.h
    particlesystem.h
    pickupitem.h
    playerbutes.h
    playerlure.h
    playerobj.h
    playertracker.h
    playertrigger.h
    playervehicle.h
    point.h
    polygrid.h
    powerarmor.h
    ../../shared/profileutils.h
    projectile.h
    projectiletypes.h
    prop.h
    proptype.h
    proptypemgr.h
    radarobject.h
    ../../shared/radartypemgr.h
    randomspawner.h
    relationbutemgr.h
    relationchangeobserver.h
    relationmgr.h
    rotatingdoor.h
    rotatingswitch.h
    rotatingworldmodel.h
    ../../shared/saveloadmgr.h
    scalesprite.h
    scanner.h
    scattervolume.h
    scmdserver.h
    ../../shared/scmdshared.h
    screenshake.h
    searchable.h
    ../../shared/searchitemmgr.h
    searchlight.h
    searchprop.h
    securitycamera.h
    serverassetmgr.h
    serverbutemgr.h
    servermark.h
    servermissionmgr.h
    servermissionsettings.h
    serversaveloadmgr.h
    serversoundfx.h
    serversoundmgr.h
    serverspecialfx.h
    servertrackednodecontext.h
    servertrackednodemgr.h
    serverutilities.h
    sfxfuncs.h
    ../../shared/sfxmsgids.h
    ../../shared/sharedbasefxstructs.h
    ../../shared/sharedfxstructs.h
    ../../shared/sharedmission.h
    ../../shared/sharedmovement.h
    ../../shared/sharedscoring.h
    singleplayermissionmgr.h
    skills.h
    ../../shared/skillsbutemgr.h
    slidingdoor.h
    slidingswitch.h
    slidingworldmodel.h
    snowvolume.h
    soundbutefx.h
    ../../shared/soundbutemgr.h
    ../../shared/soundfiltermgr.h
    ../../shared/soundmgr.h
    ../../shared/soundtypes.h
    sparam.h
    spawner.h
    speaker.h
    spinningworldmodel.h
    sprinkles.h
    startupcommand.h
    stdafx.h
    steam.h
    ../../shared/surfacefunctions.h
    ../../shared/surfacemgr.h
    switch.h
    teamdeathmatchmissionmgr.h
    ../../shared/teammgr.h
    teleportpoint.h
    ../../shared/templatelist.h
    texturefx.h
    ../../shared/timer.h
    ../../shared/trackednode.h
    ../../shared/trackednodemgr.h
    transitionaggregate.h
    transitionarea.h
    transitionmgr.h
    trigger.h
    ../../shared/triggertypemgr.h
    ../../shared/uberassert.h
    ../../shared/versionmgr.h
    volumebrush.h
    volumebrushtypes.h
    volumeeffect.h
    ../../shared/wavefn.h
    weapon.h
    ../../shared/weaponfxtypes.h
    weaponitems.h
    ../../shared/weaponmgr.h
    weapons.h
    ../../shared/winutil.h
    worldmodel.h
    worldmodeldebris.h
    worldproperties.h
    ../../../engine/sdk/inc/clientheaders.h
    ../../../engine/sdk/inc/iaggregate.h
    ../../../engine/sdk/inc/iclientshell.h
    ../../../engine/sdk/inc/iltclient.h
    ../../../engine/sdk/inc/iltcommon.h
    ../../../engine/sdk/inc/iltcsbase.h
    ../../../engine/sdk/inc/iltcursor.h
    ../../../engine/sdk/inc/iltdirectmusic.h
    ../../../engine/sdk/inc/iltmath.h
    ../../../engine/sdk/inc/iltmessage.h
    ../../../engine/sdk/inc/iltmodel.h
    ../../../engine/sdk/inc/iltphysics.h
    ../../../engine/sdk/inc/iltserver.h
    ../../../engine/sdk/inc/iltsoundmgr.h
    ../../../engine/sdk/inc/iltspritecontrol.h
    ../../../engine/sdk/inc/iltstream.h
    ../../../engine/sdk/inc/ilttransform.h
    ../../../engine/sdk/inc/iltvideomgr.h
    ../../../engine/sdk/inc/iobjectplugin.h
    ../../../engine/sdk/inc/iservershell.h
    ../../../engine/sdk/inc/lithtech.h
    ../../../engine/sdk/inc/ltanimtracker.h
    ../../../engine/sdk/inc/ltassert.h
    ../../../engine/sdk/inc/ltbasedefs.h
    ../../../engine/sdk/inc/ltbasetypes.h
    ../../../engine/sdk/inc/ltbeziercurve.h
    ../../../engine/sdk/inc/ltcodes.h
    ../../../engine/sdk/inc/ltengineobjects.h
    ../../../engine/sdk/inc/ltlink.h
    ../../../engine/sdk/inc/ltmatrix.h
    ../../../engine/sdk/inc/ltobjref.h
    ../../../engine/sdk/inc/ltplane.h
    ../../../engine/sdk/inc/ltpvalue.h
    ../../../engine/sdk/inc/ltquatbase.h
    ../../../engine/sdk/inc/ltrect.h
    ../../../engine/sdk/inc/ltrotation.h
    ../../../engine/sdk/inc/ltserverobj.h
    ../../../engine/sdk/inc/ltvector.h
    ../../../engine/sdk/inc/serverheaders.h
)

set(
    SRCS
    ../../shared/activatetypemgr.cpp
    activeworldmodel.cpp
    ai.cpp
    aiassert.cpp
    aibrain.cpp
    aibutemgr.cpp
    aicentralknowledgemgr.cpp
    aiclassfactory.cpp
    aigoalabstract.cpp
    aigoalabstractsearch.cpp
    aigoalabstractstimulated.cpp
    aigoalabstracttargeted.cpp
    aigoalabstractuseobject.cpp
    aigoalalarm.cpp
    aigoalanimate.cpp
    aigoalapprehend.cpp
    aigoalassassinate.cpp
    aigoalattack.cpp
    aigoalattackfromcover.cpp
    aigoalattackfromrandomvantage.cpp
    aigoalattackfromroofvantage.cpp
    aigoalattackfromvantage.cpp
    aigoalattackfromview.cpp
    aigoalattackmelee.cpp
    aigoalattackprone.cpp
    aigoalattackprop.cpp
    aigoalattackranged.cpp
    aigoalattackrangeddynamic.cpp
    aigoalbutemgr.cpp
    aigoalcatch.cpp
    aigoalcharge.cpp
    aigoalchase.cpp
    aigoalcheckbody.cpp
    aigoalcover.cpp
    aigoaldeflect.cpp
    aigoaldisappearreappear.cpp
    aigoaldisappearreappearevasive.cpp
    aigoaldistress.cpp
    aigoaldramadeath.cpp
    aigoaldrawweapon.cpp
    aigoalexitlevel.cpp
    aigoalflee.cpp
    aigoalfollow.cpp
    aigoalfollowfootprint.cpp
    aigoalgetbackup.cpp
    aigoalgoto.cpp
    aigoalguard.cpp
    aigoalholsterweapon.cpp
    aigoalinvestigate.cpp
    aigoallovekitty.cpp
    aigoallunge.cpp
    aigoalmenace.cpp
    aigoalmgr.cpp
    aigoalmountedflashlight.cpp
    aigoalobstruct.cpp
    aigoalpatrol.cpp
    aigoalproximitycommand.cpp
    aigoalpsychochase.cpp
    aigoalreclassifytoenemy.cpp
    aigoalrespondtoalarm.cpp
    aigoalrespondtobackup.cpp
    aigoalresurrecting.cpp
    aigoalretreat.cpp
    aigoalsearch.cpp
    aigoalsentrychallenge.cpp
    aigoalsentrymark.cpp
    aigoalserumdeath.cpp
    aigoalsleep.cpp
    aigoalsniper.cpp
    aigoalspecialdamage.cpp
    aigoaltail.cpp
    aigoaltalk.cpp
    aigoalwork.cpp
    aihuman.cpp
    aihumanstate.cpp
    aihumanstateapprehend.cpp
    aihumanstateattackmove.cpp
    aihumanstateattackprone.cpp
    aihumanstatecatch.cpp
    aihumanstatedeflect.cpp
    aihumanstatedisappearreappear.cpp
    aihumanstatelaunch.cpp
    aihumanstateobstruct.cpp
    aihumanstateresurrecting.cpp
    aihumanstatesentrychallenge.cpp
    aihumanstatesniper.cpp
    aihumanstrategy.cpp
    aihumanstrategyshootstream.cpp
    aihumanstrategytogglelights.cpp
    aiinformationvolumemgr.cpp
    aimovement.cpp
    aimovementmodifier.cpp
    ainode.cpp
    ainodedisturbance.cpp
    ainodeguard.cpp
    ainodemgr.cpp
    ainodesensing.cpp
    aipath.cpp
    aipathknowledgemgr.cpp
    aipathmgr.cpp
    airegion.cpp
    airegionmgr.cpp
    aisenserecorderabstract.cpp
    aisenserecordergame.cpp
    aisounds.cpp
    aispatialrepresentationmgr.cpp
    aistate.cpp
    aistimulusmgr.cpp
    aitarget.cpp
    aitypes.cpp
    aiutils.cpp
    aivolume.cpp
    aivolumemgr.cpp
    aivolumeneighbor.cpp
    alarm.cpp
    ammobox.cpp
    animationlex.cpp
    animationmgr.cpp
    animationparse.cpp
    animationparser.cpp
    ../../shared/animator.cpp
    animatorplayer.cpp
    ../../shared/assertmgr.cpp
    ../../shared/attachbutemgr.cpp
    attachments.cpp
    banipmgr.cpp
    body.cpp
    bodystate.cpp
    bombable.cpp
    breakable.cpp
    ../../shared/butelistreader.cpp
    butetools.cpp
    camera.cpp
    character.cpp
    ../../shared/characteralignment.cpp
    characterhitbox.cpp
    charactermgr.cpp
    clientlightfx.cpp
    ../../shared/clientservershared.cpp
    clientsfx.cpp
    clientweaponsfx.cpp
    collectiverelationmgr.cpp
    commandbutemgr.cpp
    commandmgr.cpp
    commandobject.cpp
    ../../shared/commonutilities.cpp
    controller.cpp
    coopmissionmgr.cpp
    ../../shared/crc32.cpp
    ../../shared/damagetypes.cpp
    deathmatchmissionmgr.cpp
    deathscene.cpp
    debrisfuncs.cpp
    ../../shared/debrismgr.cpp
    ../../shared/debugline.cpp
    debuglinesystem.cpp
    ../../shared/debugnew.cpp
    decisionobject.cpp
    destructible.cpp
    destructiblemodel.cpp
    dialogue.cpp
    displaymeter.cpp
    displaytimer.cpp
    doomsdaydevice.cpp
    doomsdaymissionmgr.cpp
    doomsdaypiece.cpp
    door.cpp
    doorknob.cpp
    dynamicoccludervolume.cpp
    editable.cpp
    eventcounter.cpp
    exittrigger.cpp
    explosion.cpp
    fire.cpp
    ../../shared/fxbutemgr.cpp
    ../../shared/fxstructs.cpp
    gadgettarget.cpp
    gadgettargetmgr.cpp
    ../../shared/gamealloc.cpp
    gamebase.cpp
    gamebaselite.cpp
    ../../shared/gamebutemgr.cpp
    gameservershell.cpp
    gamestartpoint.cpp
    gearitems.cpp
    ../../shared/globalmgr.cpp
    globalservermgr.cpp
    group.cpp
    hhweaponmodel.cpp
    ../../../engine/sdk/inc/iltbaseclass.cpp
    intelligence.cpp
    intelmgr.cpp
    inventorybutemgr.cpp
    jumpvolume.cpp
    key.cpp
    keydata.cpp
    keyframer.cpp
    keyitem.cpp
    ../../shared/keymgr.cpp
    keypad.cpp
    lasertrigger.cpp
    lightgroup.cpp
    lightning.cpp
    liteobjectmgr.cpp
    lock.cpp
    ../../../engine/sdk/inc/ltengineobjects.cpp
    ../../../engine/sdk/inc/ltmodule.cpp
    ../../../engine/sdk/inc/ltobjref.cpp
    ../../../engine/sdk/inc/ltquatbase.cpp
    mine.cpp
    ../../shared/missionbutemgr.cpp
    ../../shared/modelbutemgr.cpp
    moditem.cpp
    musicmgr.cpp
    ../../shared/netdefs.cpp
    nodeline.cpp
    noplayertrigger.cpp
    objectivesprite.cpp
    objectrelationmgr.cpp
    objectremover.cpp
    objecttemplatemgr.cpp
    ../../shared/parsedmsg.cpp
    particlesystem.cpp
    pickupitem.cpp
    playerlure.cpp
    playerobj.cpp
    playertracker.cpp
    playertrigger.cpp
    playervehicle.cpp
    point.cpp
    polygrid.cpp
    polygridmodifier.cpp
    powerarmor.cpp
    ../../shared/profileutils.cpp
    projectile.cpp
    projectiletypes.cpp
    prop.cpp
    proptype.cpp
    proptypemgr.cpp
    radarobject.cpp
    ../../shared/radartypemgr.cpp
    randomspawner.cpp
    relationbutemgr.cpp
    relationmgr.cpp
    rotatingdoor.cpp
    rotatingswitch.cpp
    rotatingworldmodel.cpp
    ../../shared/saveloadmgr.cpp
    scalesprite.cpp
    scanner.cpp
    scattervolume.cpp
    scmdserver.cpp
    screenshake.cpp
    searchable.cpp
    ../../shared/searchitemmgr.cpp
    searchlight.cpp
    searchprop.cpp
    securitycamera.cpp
    serverassetmgr.cpp
    serverbutemgr.cpp
    servermark.cpp
    servermissionmgr.cpp
    serversaveloadmgr.cpp
    serversoundfx.cpp
    serversoundmgr.cpp
    serverspecialfx.cpp
    servertrackednodecontext.cpp
    servertrackednodemgr.cpp
    serverutilities.cpp
    sfxfuncs.cpp
    ../../shared/sharedfxstructs.cpp
    ../../shared/sharedmission.cpp
    ../../shared/sharedmovement.cpp
    ../../shared/sharedscoring.cpp
    singleplayermissionmgr.cpp
    skills.cpp
    ../../shared/skillsbutemgr.cpp
    slidingdoor.cpp
    slidingswitch.cpp
    slidingworldmodel.cpp
    snowvolume.cpp
    soundbutefx.cpp
    ../../shared/soundbutemgr.cpp
    ../../shared/soundfiltermgr.cpp
    ../../shared/soundmgr.cpp
    sparam.cpp
    spawner.cpp
    speaker.cpp
    spinningworldmodel.cpp
    sprinkles.cpp
    ../../shared/stacktrace.cpp
    startupcommand.cpp
    stdafx.cpp
    steam.cpp
    ../../shared/surfacefunctions.cpp
    ../../shared/surfacemgr.cpp
    switch.cpp
    teamdeathmatchmissionmgr.cpp
    ../../shared/teammgr.cpp
    teleportpoint.cpp
    ../../shared/templatelist.cpp
    texturefx.cpp
    ../../shared/trackednode.cpp
    ../../shared/trackednodecontext.cpp
    ../../shared/trackednodecontrolfn.cpp
    ../../shared/trackednodemgr.cpp
    transitionaggregate.cpp
    transitionarea.cpp
    transitionmgr.cpp
    trigger.cpp
    ../../shared/triggertypemgr.cpp
    ../../shared/uberassert.cpp
    ../../shared/versionmgr.cpp
    volumebrush.cpp
    volumebrushtypes.cpp
    volumeeffect.cpp
    ../../shared/wavefn.cpp
    weapon.cpp
    weaponitems.cpp
    ../../shared/weaponmgr.cpp
    weapons.cpp
    ../../shared/winutil.cpp
    worldmodel.cpp
    worldmodeldebris.cpp
    worldproperties.cpp
)

if (MSVC)
    set_source_files_properties(
        animationlex.cpp
        animationparse.cpp
        ../../../engine/sdk/inc/iltbaseclass.cpp
        ../../../engine/sdk/inc/ltengineobjects.cpp
        ../../../engine/sdk/inc/ltmodule.cpp
        ../../../engine/sdk/inc/ltobjref.cpp
        ../../../engine/sdk/inc/ltquatbase.cpp
        PROPERTIES
            # Precompiled Header (None)
            COMPILE_FLAGS -Y-
    )

    set_source_files_properties(
        stdafx.cpp
        PROPERTIES
            # Precompiled Header (Create)
            COMPILE_FLAGS -Yc
    )
endif ()

add_library(
    ${LTJS_TARGET} STATIC
    ${HDRS}
    ${SRCS}
)
